patch by:  Patrick Fey 	* INSTALL: Improve installation instructions.
svn path=/trunk/; revision=125

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-08  Olav Vitters  <olav@bkor.dhs.org>
+
+	patch by:  Patrick Fey
+
+	* INSTALL: Improve installation instructions.
+
 2007-12-04  Olav Vitters  <olav@bkor.dhs.org>
 
 	* config.xml-gnome: Make it valid XML.
