--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-12-08  Olav Vitters  <olav@bkor.dhs.org>
 
+	patch by:  Patrick Fey
+
+	* lib/ldap.php: Return error messages raised during connection to LDAP
+	server. This was broken due to the switch to the singleton method.
+
+2007-12-08  Olav Vitters  <olav@bkor.dhs.org>
+
 	patch by: Patrick Fey
 
 	* lib/ldap.php: Use ldap url instead of hostname to connect to ldap
