--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-22  Olav Vitters  <olav@bkor.dhs.org>
 
+	* lib/user.php: Only remove pubkeyAuthenticationUser if user currently
+	has that object.
+
+2008-05-22  Olav Vitters  <olav@bkor.dhs.org>
+
 	* templates/user_instructions.xsl: Fix Danglish.
 
 2008-05-22  Olav Vitters  <olav@bkor.dhs.org>
