--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-22  Olav Vitters  <olav@bkor.dhs.org>
 
+	* www/update_user.xsl: Group the groups. Meaning: developer related
+	groups together, foundation stuff together, etc.
+
+2008-05-22  Olav Vitters  <olav@bkor.dhs.org>
+
 	* lib/user.php: Only remove pubkeyAuthenticationUser if user currently
 	has that object.
 
