Change to PHP5 style object.
	* lib/user.php: Change to PHP5 style object.


svn path=/trunk/; revision=162

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-05-31  Olav Vitters  <olav@bkor.dhs.org>
 
+	* lib/user.php: Change to PHP5 style object.
+
+2008-05-31  Olav Vitters  <olav@bkor.dhs.org>
+
 	* lib/user.php: Rework the which_shell and which_homedir functions.
 	They're still a bit stupid, but at least it is consistently stupid.
 	* www/index.php: Set page title to 'Main page' when user is logged in.
