--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-05-31  Olav Vitters  <olav@bkor.dhs.org>
 
+	* lib/user.php: Typo fix.
+	* www/update_user.php: Remove savedkey handling. Just pass the entire
+	key to the form, much easier.
+	* www/update_user.xsl: Follow changes made above.
+
+2008-05-31  Olav Vitters  <olav@bkor.dhs.org>
+
 	* lib/user.php: Rework shell granting.
 
 2008-05-31  Olav Vitters  <olav@bkor.dhs.org>
