Kill the tabs. They just make updating a user more annoying as not
	* www/update_user.php: Kill the tabs. They just make updating a user
	more annoying as not everything is on one page, plus you cannot switch
	between 'tabs' without saving the user.
	* www/update_user.xsl: Kill tabs in the UI as well.


svn path=/trunk/; revision=169

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-06-01  Olav Vitters  <olav@bkor.dhs.org>
+
+	* www/update_user.php: Kill the tabs. They just make updating a user
+	more annoying as not everything is on one page, plus you cannot switch
+	between 'tabs' without saving the user.
+	* www/update_user.xsl: Kill tabs in the UI as well.
+
 2008-05-31  Olav Vitters  <olav@bkor.dhs.org>
 
 	* www/update_user.php: PHP5 style object.
