--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-01  Olav Vitters  <olav@bkor.dhs.org>
 
+	* lib/user.php: Always check key length.
+	* www/update_user.xsl: Show SSH key errors.
+
+2008-06-01  Olav Vitters  <olav@bkor.dhs.org>
+
 	* www/update_user.php: Ensure all attributes of a user are updated;
 	meaning: if there are changes in the general section, the SSH keys
 	should still receive updates as well.
