--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2008-06-21  Olav Vitters  <olav@bkor.dhs.org>
+
+	Try and port the mess to Python using the Django framework.
+
+	* .bzrignore: Ignore the django directory.
+	* mango/manage.py: Standard Django script to manage the Django
+	project.
+	* mango/models.py: Describes the Database (needs a bit of work).
+	* mango/settings.py: Django settings and the config.xml file.
+	* mango/urls.py: Maps URLs to functions which will be called.
+	* mango/views.py: Handles turning an http request into an http
+	response (application/xml).
+
 2008-06-08  Olav Vitters  <olav@bkor.dhs.org>
 
 	* lib/util.php: Correctly throw the Exception.
